[package]
name = "tsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
kd-tree = "0.5.1"

diesel = { version = "2.2.0", features = ["postgres", "chrono", "serde_json"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3.0"
rocket_cors = "0.6.0"

rand = "0.8.5"
md5 = "0.7.0"
sha2 = "0.10.8"
regex = "1.10.0"
pdqselect = "0.1.1"
geoutils = "0.5.1"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]